IF(Qt5Gui_FOUND AND Qt5Widgets_FOUND AND Qt5PrintSupport_FOUND)
  ADD_SUBDIRECTORY(ChOx) 
ENDIF(Qt5Gui_FOUND AND Qt5Widgets_FOUND AND Qt5PrintSupport_FOUND)

IF(Boost_PROGRAM_OPTIONS_FOUND AND Boost_FILESYSTEM_FOUND AND Boost_CHRONO_FOUND)
  ADD_SUBDIRECTORY(Lib) 

  IF(SQLITE3_FOUND)
     ADD_SUBDIRECTORY(PSDCreate) 
     ADD_SUBDIRECTORY(PSDScreen) 
     ADD_SUBDIRECTORY(PSDMerge)
     ADD_SUBDIRECTORY(PSDInfo)  
  ENDIF(SQLITE3_FOUND)
ENDIF(Boost_PROGRAM_OPTIONS_FOUND AND Boost_FILESYSTEM_FOUND AND Boost_CHRONO_FOUND)
